frontend/tests/cases/positive/interface-simple-13.gr
-- two instances
instance Simple Nat where
  simple x = x

instance Simple Bool where
  simple x = x
