frontend/tests/cases/negative/tooManyInstanceParameters.gr
interface Simple a where
  simple : a -> a

-- too many parameters to instance
instance Simple a a where
  simple x = x
